src/objects/APTS_Order_Freight_Data__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Breakup_Type__c</fullName>
        <label>Breakup Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detail</fullName>
                    <default>true</default>
                    <label>Detail</label>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_FreightRate__c</fullName>
        <label>FreightRate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Amount__c</fullName>
        <label>Freight Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Applies_To__c</fullName>
        <label>Freight Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net Price</fullName>
                </value>
                <value>
                    <fullName>Base Price</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Freight_Type__c</fullName>
        <label>Freight Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipName>Freights_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipName>Freights_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Freight Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OFD-{0000}</displayFormat>
        <label>Order Freight ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Freights Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>